<resources>
    <string name="app_name">Lost n\' Found</string>

    <string name="title_activity_map">Map</string>
    <string name="nav_map">Map</string>
    <string name="nav_animals">Your Pets</string>
    <string name="nav_listings">Listings</string>
    <string name="nav_home">Home</string>
    <string name="post_name" />
    <string name="post_color" />
    <string name="post_location" />
    <string name="post_email" />
    <string name="post_date" />
    <string name="post_phone" />
    <string name="post_description" />
    <string name="post_type" />
    <string name="post_picture">Picture</string>
    <string name="post_hint_name">Name</string>
    <string name="post_hint_color">Color</string>
    <string name="post_hint_date">Date Lost</string>
    <string name="post_hint_location">Last Location</string>
    <string name="post_hint_phone">Phone</string>
    <string name="post_hint_email">Email</string>
    <string name="post_hint_description">Extra Info</string>
    <string name="post_pic_button">Add Pic</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="post_submit">Submit</string>
    <string name="main_post_button">Post an Animal</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_description">Extra Info</string>
    <string name="profile_picture">Picture</string>
    <string name="profile_name">Name</string>
    <string name="profile_type">Dog</string>
    <string name="profile_color">Color</string>
    <string name="profile_location">Location</string>
    <string name="profile_date">Date</string>

</resources>
