<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <!--<TextView
            android:id="@+id/postPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_picture" />
-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/post_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postType" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/post_status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <EditText
            android:id="@+id/postName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_name"
            android:inputType="textPersonName"
            android:text="@string/post_name" />

        <EditText
            android:id="@+id/postColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_color"
            android:inputType="textPersonName"
            android:text="@string/post_color" />

        <EditText
            android:id="@+id/postDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_date"
            android:inputType="date"
            android:text="@string/post_date" />

        <EditText
            android:id="@+id/postLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/post_hint_location"
            android:inputType="textPersonName"
            android:text="@string/post_location" />

        <EditText
            android:id="@+id/postPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_phone"
            android:inputType="phone"
            android:text="@string/post_phone" />

        <EditText
            android:id="@+id/postEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_email"
            android:inputType="textEmailAddress"
            android:text="@string/post_email" />

        <EditText
            android:id="@+id/postDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_description"
            android:inputType="textMultiLine"
            android:text="@string/post_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/postSubmit"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/submit_button_medium"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>